# what flags you want to pass to the C compiler & linker
#CFLAGS = --pedantic -Wall -std=c99 -O2

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
noinst_LIBRARIES = libopp.a
libopp_a_SOURCES = blob.cpp blob.h memory.cpp memory.h storage.cpp storage.h table.cpp table.h

library_includedir=$(includedir)/opp
